# VitalAgent_Health_Copilot

./: .env  .gitignore  main.py  pyproject.toml
data/: health.db
data/raw/: merged_data.csv
src/agent/: bot.py  tools.py
src/databases/: setup.py
src/rag/: ingest.py
src/ui/: app.py
